# mandelbrot

./: Cargo.toml  README.md
src/: main.rs  parser.rs  render.rs  set.rs
